/// * ============================================================
/// *
/// * This file is a part of CoSiMA (CogIMon) project
/// *
/// * Copyright (C) 2018 by Dennis Leroy Wigand <dwigand at cor-lab dot uni-bielefeld dot de>
/// *
/// * This file may be licensed under the terms of the
/// * GNU Lesser General Public License Version 3 (the ``LGPL''),
/// * or (at your option) any later version.
/// *
/// * Software distributed under the License is distributed
/// * on an ``AS IS'' basis, WITHOUT WARRANTY OF ANY KIND, either
/// * express or implied. See the LGPL for the specific language
/// * governing rights and limitations.
/// *
/// * You should have received a copy of the LGPL along with this
/// * program. If not, go to http://www.gnu.org/licenses/lgpl.html
/// * or write to the Free Software Foundation, Inc.,
/// * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
/// *
/// * The development of this software was supported by:
/// *   CoR-Lab, Research Institute for Cognition and Robotics
/// *     Bielefeld University
/// *
/// * ============================================================

syntax = "proto2";
package cosima_gazebo_virtual_elements.msgs;

/// \ingroup cosima_gazebo_virtual_elements
/// \interface Constraint 
/// \brief Spring message for passing info between two entities (e.g., server and client)

import "pose.proto";
import "time.proto";

message Constraint
{
    required uint32 id                                = 1;
    required string name                              = 2;

    required string anchor_type                       = 4;
    required gazebo.msgs.Pose anchor                  = 5;
    required bool in_world_frame                      = 6;

    required gazebo.msgs.Time time                    = 7;
}