/// * ============================================================
/// *
/// * This file is a part of CoSiMA (CogIMon) project
/// *
/// * Copyright (C) 2018 by Dennis Leroy Wigand <dwigand at cor-lab dot uni-bielefeld dot de>
/// *
/// * This file may be licensed under the terms of the
/// * GNU Lesser General Public License Version 3 (the ``LGPL''),
/// * or (at your option) any later version.
/// *
/// * Software distributed under the License is distributed
/// * on an ``AS IS'' basis, WITHOUT WARRANTY OF ANY KIND, either
/// * express or implied. See the LGPL for the specific language
/// * governing rights and limitations.
/// *
/// * You should have received a copy of the LGPL along with this
/// * program. If not, go to http://www.gnu.org/licenses/lgpl.html
/// * or write to the Free Software Foundation, Inc.,
/// * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
/// *
/// * The development of this software was supported by:
/// *   CoR-Lab, Research Institute for Cognition and Robotics
/// *     Bielefeld University
/// *
/// * ============================================================

syntax = "proto2";
package cosima_gazebo_virtual_spring.msgs;

/// \ingroup cosima_gazebo_virtual_spring
/// \interface Spring 
/// \brief Spring message for passing info between two entities (e.g., server and client)

import "vector3d.proto";
import "pose.proto";
import "time.proto";

message Spring
{
    required uint32 id                                = 1;
    required string name                              = 2;

    required gazebo.msgs.Vector3d anchor              = 3;
    required gazebo.msgs.Vector3d target              = 4;
    required gazebo.msgs.Pose reference               = 5;

    required gazebo.msgs.Time time                    = 6;

    required gazebo.msgs.Vector3d stiffness           = 7;
    required gazebo.msgs.Vector3d damping             = 8;
    optional gazebo.msgs.Vector3d stiffness_orient    = 9;
    optional gazebo.msgs.Vector3d damping_orient      = 10;

    optional bool active                              = 11 [default = true];
}